# src/main/kotlin/ru/zelginni/tinycerberusbot/pythia/PythiaPredictionDto.kt
@@ -1,0 +1,10 @@
+package ru.zelginni.tinycerberusbot.pythia
+
+data class PythiaPredictionView(
+    val id: Long,
+    val text: String,
+)
+
+data class AddPythiaPredictionRequest(
+    val text: String = "",
+)
