# src/main/resources/openapi/openapi.json
@@ -3,7 +3,7 @@
     "info": {
         "title": "Tiny Cerberus Bot",
         "description": "Discipline Telegram Chat bot",
-        "version": "v1.2.4"
+        "version": "v1.2.5"
     },
     "servers": [
         {
@@ -400,6 +400,57 @@
                 ]
             }
         },
+        "/admin/bot/predictions": {
+            "get": {
+                "tags": [
+                    "pythia-prediction-controller"
+                ],
+                "operationId": "getPredictions",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "*/*": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/PythiaPredictionView"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "pythia-prediction-controller"
+                ],
+                "operationId": "addPrediction",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/AddPythiaPredictionRequest"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "*/*": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/PythiaPredictionView"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/admin/chat/cache/clean": {
             "get": {
                 "tags": [
@@ -769,6 +820,37 @@
                     }
                 }
             }
+        },
+        "/admin/bot/predictions/{id}": {
+            "delete": {
+                "tags": [
+                    "pythia-prediction-controller"
+                ],
+                "operationId": "deletePrediction",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "*/*": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -835,6 +917,26 @@
                     }
                 }
             },
+            "AddPythiaPredictionRequest": {
+                "type": "object",
+                "properties": {
+                    "text": {
+                        "type": "string"
+                    }
+                }
+            },
+            "PythiaPredictionView": {
+                "type": "object",
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    "text": {
+                        "type": "string"
+                    }
+                }
+            },
             "AllChatResponse": {
                 "type": "object",
                 "properties": {
@@ -876,6 +978,9 @@
                         "type": "boolean"
                     },
                     "statisticsEnabled": {
+                        "type": "boolean"
+                    },
+                    "pythiaEnabled": {
                         "type": "boolean"
                     },
                     "fullStatisticsLimit": {
